# quasitiler

./: CMakeLists.txt  README.md
quasitiler/: CMakeLists.txt
quasitiler/include/dak/quasitiler/: drawing.h  interruptor.h  point_reporter.h  tiling.h  tiling_point.h
quasitiler/src/: drawing.cpp  tiling.cpp
quasitiler_app/: CMakeLists.txt
quasitiler_app/include/: dimension_editor.h  main_window.h  tile_group_editor.h
quasitiler_app/resources/: resource.h  resource.rc
quasitiler_app/src/: dimension_editor.cpp  main_window.cpp  quasitiler_app.cpp  tile_group_editor.cpp
quasitiler_tests/: CMakeLists.txt
quasitiler_tests/include/dak/quasitiler_tests/: helpers.h
quasitiler_tests/src/: drawing_tests.cpp  tiling_tests.cpp
